--- a/Qemer_POS/package.json
+++ b/Qemer_POS/package.json
@@ -23,6 +23,7 @@
         "tailwindcss": "^3.0.23"
     },
     "dependencies": {
+        "admin-lte": "^3.2.0",
         "bootstrap-icons": "^1.8.1"
     }
 }
